# passark

./: .env.example  .gitignore  Makefile  README.md  compose.yaml
backend/: pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_baseline.py  0002_auth_schema.py  0003_audit_events.py  0004_organization_catalog_users.py  0005_catalog_teams_roles_memberships.py  0006_catalog_apps_projects_environments_resources.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: auth.py  catalog.py  health.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  session.py
backend/passark_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_catalog_api.py  test_config.py  test_health.py
docs/: local-development.md  security-model.md
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: auth-shell.tsx  globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/operator/: page.tsx
frontend/lib/: auth.ts  catalog.ts
frontend/scripts/: run-vitest.mjs
frontend/tests/: app-shell.test.tsx  auth-flow.test.tsx  catalog-workspace.test.tsx  operator-dashboard.test.tsx
scripts/: verify-milestone.sh  verify-s01.sh  verify-s02.sh  verify-s03.sh  verify-s04.sh  verify-s05.sh  verify-s06.sh
