[project]
name = "passark-backend"
version = "0.1.0"
description = "PassArk backend service"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.111,<1.0",
  "psycopg[binary]>=3.1,<4.0",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
